[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronix"
version = "1.0.0"
description = "Self-hosted collaborative workspace for security operations"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [
    { name = "Tyrrell Brewster", email = "0xtb.sh@proton.me" }
]
keywords = ["pentest", "red-team", "collaboration", "notes", "logging", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.5.3",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    # Security dependencies
    "argon2-cffi>=23.1.0",  # Password hashing (Argon2id)
    "bleach>=6.1.0",        # HTML/Markdown sanitization
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
chronix = "chronix.cli:main"

[project.urls]
Homepage = "https://github.com/icecubesandwich/chronix"
Documentation = "https://github.com/icecubesandwich/chronix#readme"
Repository = "https://github.com/icecubesandwich/chronix"
Author = "https://0xtb.sh"

[tool.hatch.build.targets.wheel]
packages = ["src/chronix"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/SECURITY.md",
]
